--- a/meals_unbound/package.json
+++ b/meals_unbound/package.json
@@ -10,8 +10,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^16.0.0",
+    "@react-native-firebase/auth": "^16.0.0",
+    "@react-navigation/stack": "^6.3.2",
+    "firebase": "^9.12.1",
     "react": "17.0.2",
-    "react-native": "0.68.2"
+    "react-native": "0.68.2",
+    "react-native-gesture-handler": "^2.7.1",
+    "react-native-reanimated": "^2.11.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2"
   },
   "devDependencies": {
     "@babel/core": "7.19.3",
