--- a/meals_unbound/package.json
+++ b/meals_unbound/package.json
@@ -15,6 +15,7 @@
     "@react-native-firebase/auth": "^16.0.0",
     "@react-navigation/stack": "^6.3.2",
     "firebase": "^9.12.1",
+    "lottie-react-native": "^5.1.4",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "^2.7.1",
